# ansible-st2

./: .gitignore  .kitchen.yml  .markdownlint.yml  .tool-versions  .travis.yml  .yamllint  CHANGELOG.md  Dockerfile  Gemfile  README.md  Vagrantfile  ansible.cfg  ansible.cfg.galaxy  circle.yml  pyproject.toml  requirements.yml  stackstorm.yml
.circleci/: config.yml
.github/workflows/: build.yaml  e2e.yaml  lint.yaml
.kitchen-docker/centos6/: Dockerfile
.kitchen-docker/centos7/: Dockerfile
.kitchen-docker/centos8/: Dockerfile
.kitchen-docker/rockylinux8/: Dockerfile
meta/: main.yml
molecule/centos7/: Dockerfile.centos7.j2  molecule.yml
molecule/python36/: molecule.yml
molecule/python38/: Dockerfile.rockylinux8.j2  molecule.yml
molecule/rockylinux8/: molecule.yml
molecule/ubuntu18/: Dockerfile.ubuntu18.j2  molecule.yml
molecule/ubuntu20/: Dockerfile.ubuntu20.j2  molecule.yml
playbooks/: ansible.cfg  requirements.yml  st2express.yaml  stackstorm.yml
roles/StackStorm.epel/meta/: main.yml
roles/StackStorm.epel/tasks/: main.yml
roles/StackStorm.ewc/meta/: main.yml
roles/StackStorm.ewc/tasks/: ewc_repos_apt.yml  ewc_repos_cleanup_debian.yml  ewc_repos_cleanup_redhat.yml  ewc_repos_cleanup_yum.yml  ewc_repos_dnf.yml  ewc_repos_setup.yml  ldap.yml  license.yml  (+2 more)
roles/StackStorm.mongodb/: README.md
roles/Stackstorm.post_install/: README.md
roles/mistral/: requirements.yml
roles/mongodb/: README.md
roles/pip/: README.md
roles/rabbitmq/: README.md
roles/st2/: requirements.yml
test/: requirements.yml
test/integration/: default.yml
(+328 files in other folders)
