[tool.poetry]
name = "ansible-st2"
version = "3.1.0"
description = "Ansible Roles and Playbooks to deploy StackStorm"
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "ansible_st2"}]

[tool.poetry.dependencies]
python = "^3.8"
ansible-core = "2.13.6"
ansible-lint = "6.8.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
